--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -75,9 +75,9 @@ The events include:
 |Name |Description
 |A11ycheckStart |Fired when the Accessibility Checker is `opened`
 |A11ycheckStop |Fired when the Accessibility Checker is `closed`
-|A11ycheckIgnore |Fired when the `Ignore` button is toggled
-|A11ycheckRepair |Fired when the `Repair` button is toggled
-|A11ycheckShowDetails |Fired when the `Click for more info` button is toggled
+|A11ycheckIgnore |Fired when the `Ignore` button is pressed
+|A11ycheckRepair |Fired when the `Repair` button is pressed
+|A11ycheckShowDetails |Fired when the `Click for more info` button is pressed
 |===
 
 [NOTE]
