--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -291,6 +291,7 @@
 *** xref:advanced-typography.adoc[Advanced Typography]
 *** xref:ai.adoc[AI Assistant]
 **** xref:ai-proxy.adoc[AI proxy server reference guide]
+**** xref:ai-openai.adoc[OpenAI ChatGPT integration guide]
 *** xref:casechange.adoc[Case Change]
 *** xref:checklist.adoc[Checklist]
 *** Comments
