DOC-2392: remove mention of plugin versions, remove plugin version links.

--- a/modules/ROOT/pages/cloud-deployment-guide.adoc
+++ b/modules/ROOT/pages/cloud-deployment-guide.adoc
@@ -21,9 +21,9 @@ Connect to Tiny Cloud within a hybrid deployment.
 
 |
 [.lead]
-xref:editor-plugin-version.adoc[Specify editor & plugin versions]
+xref:editor-plugin-version.adoc[Specify editor & plugins]
 
-Specifying editor and plugin versions for Tiny Cloud deployments.
+Specifying editor and plugins for Tiny Cloud deployments.
 
 |
 [.lead]
