--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -31,7 +31,7 @@ include::partial$misc/admon-script-tag-placement.adoc[]
 
 === `plugin.min.js` Standalone with No Exclusions.
 
-The `plugins.min.js` script loads every plugin the API key is entitled to from the CDN.
+The `plugins.min.js` script loads every premium plugin the API key is entitled to from the CDN.
 
 [source,html,subs="attributes+"]
 ----
