--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -81,7 +81,7 @@ All {cloudname} channels are based on the {enterpriseversion} version.
 
 Choose from the `{productmajorversion}`, `{productmajorversion}-testing`, or `{productmajorversion}-dev` release channels to load the latest version of {productname} from {cloudname}.
 
-These channels are updated automatically and provide the latest {productname} version based on the follow criteria:
+These channels are updated automatically and provide the latest {productname} version based on the following criteria:
 
 [#{productmajorversion}-release-channel]
 ==== {productmajorversion} Release Channel
