--- a/modules/ROOT/pages/editor-plugin-version.adoc
+++ b/modules/ROOT/pages/editor-plugin-version.adoc
@@ -23,7 +23,7 @@ For more details, check out the xref:editor-and-features.adoc[{productname} edit
 [[specifying-the-cloud-deployment-of-plugins]]
 == Specifying the Cloud Deployment of Plugins
 
-When deploying {productname}, integrators have the choice to **self-host** premium plugins or load them from {companyname} Cloud (a.k.a. hybrid mode). Depending on your requirements, you can use a combination of both approaches.
+When self-hosting {productname}, integrators have the choice to host premium plugins or load them from {companyname} Cloud (a.k.a. hybrid mode). Depending on your requirements, you can use a combination of both approaches.
 
 include::partial$misc/admon-script-tag-placement.adoc[]
 
