--- a/modules/ROOT/pages/7.1.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1.1-release-notes.adoc
@@ -63,7 +63,7 @@ The following premium plugin updates were released alongside {productname} {rele
 
 The {productname} {release-version} release includes an accompanying release of the **Math** premium plugin.
 
-**Premium plugin Math**, includes the following fix.
+The **Math** premium plugin includes the following fix:
 
 ==== Clearing the formula input and then saving didn't remove the element.
 
